Fix content clipping: restore zoom scaling, add bg to html
- Set background-color on html so zoom scaling doesn't reveal white
- Change body from fixed height to min-height so content flows naturally
- Remove overflow:hidden from .content that was clipping quotes/links
- Restore fitToScreen with zoom to uniformly scale content to fit viewport

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,6 +19,7 @@
 
 html {
     overflow: hidden;
+    background-color: #faf6f2;
 }
 
 body {
@@ -35,7 +36,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 100dvh;
+    min-height: 100dvh;
     box-sizing: border-box;
 }
 
@@ -191,7 +192,6 @@ strong {
 
 .content {
     flex: 1;
-    overflow: hidden;
 }
 
 .site-footer {
